# st-dataplot

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pypi-release.yml
examples/: example.py
st_dataplot/: __init__.py  channel.py  plotly_templates.py  scatter.py
