[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "st_dataplot"
dynamic = ["version"]
authors = [{ name = "Maxwell Levin", email = "maxwellshannonlevin@gmail.com" }]
description = "Tool for creating scatter plots of pandas dataframes in streamlit."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["streamlit", "pandas", "plotly"]
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

dependencies = ["pandas", "numpy", "streamlit", "plotly", "cmocean"]

[project.optional-dependencies]
dev = ["build", "ruff", "mypy", "watchdog"]

[tool.setuptools.packages.find]
include = ["st_dataplot"]

[tool.setuptools.package-data]
st_dataplot = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "st_dataplot/_version.py"

[tool.setuptools.dynamic]
version = { attr = "st_dataplot._version.__version__" }
